--- a/.gitconfig
+++ b/.gitconfig
@@ -1,3 +1,8 @@
 [user]
 	name = Han Zitong
 	email = han.zitong@rm.is.tohoku.ac.jp
+[github]
+	user = hanzitong
+	token = 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
+[core]
+	editor = vim
