add tmux.conf command prompot color setting as terminal default

--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -22,5 +22,6 @@ set-window-option -g mode-keys vi
 # コピーした際にwindowsのクリップボードにも転送する
 bind-key -T ocpy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xsel -vi"
 
-
+# for displaying tmux prompt in terminal color
+set -g default-terminal "screen-256color"
 
