--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -1,14 +1,17 @@
 
 
 # prefixキーをC-bからC-tに変更
-set -g prefix C-t
 unbind C-b
+set -g prefix C-t
+
+# for displaying tmux prompt in terminal color
+set -g default-terminal "screen-256color"
 
 # vimのキーバインドでペインを移動する
-#bind h select-pane -L
-#bind j select-pane -D
-#bind k select-pane -U
-#bind l select-pane -R
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
 
 # マウスのスクロール有効化
 set -g mouse on 
@@ -17,11 +20,19 @@ bind-key -T edit-mode-vi WheelDownPane send-keys -X scroll-down
 
 # コピーモードの操作をvi風にする
 set-window-option -g mode-keys vi
+# set-option -g mode-keys vi
 
-
+# [memo] copy cmd in tmux: Ctrl + ] and ]
 # コピーした際にwindowsのクリップボードにも転送する
-bind-key -T ocpy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xsel -vi"
+# bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xsel -vi"
 
-# for displaying tmux prompt in terminal color
-set -g default-terminal "screen-256color"
+# Linux
+# bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel "xclip -selection clipboard -in"
+
+
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xsel -bi"
+bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xsel-bi"
+
 
