modified comment and organized

--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -1,38 +1,53 @@
 
-
-# prefixキーをC-bからC-tに変更
+# Change prefix-key from C-b to C-t globally
 unbind C-b
 set -g prefix C-t
 
-# for displaying tmux prompt in terminal color
+# Set terminal-color- scheme 256 globally
 set -g default-terminal "screen-256color"
 
-# vimのキーバインドでペインを移動する
+# Chage key-binds of moving pane to vi-like
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
-# マウスのスクロール有効化
+# Enable mouse scrolling
 set -g mouse on 
 bind-key -T edit-mode-vi WheelUpPane send-keys -X scroll-up
 bind-key -T edit-mode-vi WheelDownPane send-keys -X scroll-down
 
-# コピーモードの操作をvi風にする
+# Set copy-mode operation like vi globally
 set-window-option -g mode-keys vi
 # set-option -g mode-keys vi
 
-# [memo] copy cmd in tmux: Ctrl + ] and ]
-# コピーした際にwindowsのクリップボードにも転送する
-# bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xsel -vi"
-
-# Linux
-# bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel "xclip -selection clipboard -in"
-
-
+# Change key-binds of selection-mode copy-mode
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
-bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xsel -bi"
-bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xsel-bi"
+
+# Settings for transfering copied string to clipboard
+##############################
+# [tmux command memo]        #
+#  copy start:   Ctrl + [    #
+#  select start: v or C-v    #
+#  select end:   y or Enter  #
+#  paste:        Ctrl + ]    #
+##############################
+#################
+# Ubuntu(Linux) #
+#################
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "wl-copy"
+bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "wl-copy"
+
+###########
+# Windows #
+###########
+# bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xsel -bi"
+# bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xsel-bi"
+
+########################
+# X11(X Window System) #
+########################
+# bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel "xclip -selection clipboard -in"
 
 
