settings for mouse copy / paste

--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -1,10 +1,16 @@
 
+# Set terminal-color- scheme 256 globally
+set -g default-terminal "screen-256color"
+
+# Set copy-mode operation like vi globally
+set-window-option -g mode-keys vi
+
+# Enable clipboard synchronization
+set-option -g set-clipboard on
+
 # Change prefix-key from C-b to C-t globally
 unbind C-b
 set -g prefix C-t
-
-# Set terminal-color- scheme 256 globally
-set -g default-terminal "screen-256color"
 
 # Chage key-binds of moving pane to vi-like
 bind h select-pane -L
@@ -17,37 +23,60 @@ set -g mouse on
 bind-key -T edit-mode-vi WheelUpPane send-keys -X scroll-up
 bind-key -T edit-mode-vi WheelDownPane send-keys -X scroll-down
 
-# Set copy-mode operation like vi globally
-set-window-option -g mode-keys vi
-# set-option -g mode-keys vi
 
 # Change key-binds of selection-mode copy-mode
-bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
+#bind-key -T copy-mode-vi v send-keys -X begin-selection
+#bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 
-# Settings for transfering copied string to clipboard
-##############################
-# [tmux command memo]        #
-#  copy start:   Ctrl + [    #
-#  select start: v or C-v    #
-#  select end:   y or Enter  #
-#  paste:        Ctrl + ]    #
-##############################
-#################
-# Ubuntu(Linux) #
-#################
-bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "wl-copy"
-bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "wl-copy"
 
+#test
+bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -selection clipboard -in"
+#bind-key -T copy-mode     MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -selection clipboard -in"
+
+#test2
+bind-key v copy-mode \; send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -selection clipboard -in"
+bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xclip -selection clipboard -in"
+
+
+
+# Settings of copy/paste via the clipboard
+########################################################################
+# [tmux command memo]  OLD                                             #
+#  copy start:   Ctrl + [                                              #
+#  select start: v or C-v                                              #
+#  select end:   y or Enter                                            #
+#  paste:        Ctrl + ]                                              #
+#                                                                      #
+# [argument separation memo]                                           #
+# Ex: bind-key (-T copy-mode-vi) C-v (send-keys -X rectanble-toggle)   #
+########################################################################
 ###########
 # Windows #
 ###########
 # bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xsel -bi"
-# bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xsel-bi"
+# bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xsel -bi"
 
-########################
-# X11(X Window System) #
-########################
-# bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel "xclip -selection clipboard -in"
+
+###############################
+# Ubuntu X11 (X Window System) #
+###############################
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -selection clipboard -in"
+bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xclip -selection clipboard -in"
+bind-key p run-shell "xclip -o -selection clipboard | tmux load-buffer - && tmux paste-buffer"
+
+#################################################
+# Ubuntu Wayland (need to install wl-clipboard) #
+#################################################
+# bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "wl-copy"
+# bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "wl-copy"
+
+# Enable mouse copy/paste
+bind-key -T copy-mode-vi C-c send-keys -X copy-pipe-and-cancel "xclip -selection clipboard -in"
+bind-key -n C-v run-shell "xclip -o -selection clipboard | tmux load-buffer - && tmux paste-buffer"
+
+bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -selection clipboard -in"
+bind-key -T copy-mode     MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -selection clipboard -in"
+
 
 
