update tmux.conf and seting.json in dualbooted_ubuntu_aurus

--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -2,6 +2,9 @@
 # Set terminal-color- scheme 256 globally
 set -g default-terminal "screen-256color"
 
+# Enable mouse drag for changing pane size
+setw -g alternate-screen on
+
 # Set copy-mode operation like vi globally
 set-window-option -g mode-keys vi
 
@@ -61,9 +64,11 @@ bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xclip -selecti
 ###############################
 # Ubuntu X11 (X Window System) #
 ###############################
-bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -selection clipboard -in"
-bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xclip -selection clipboard -in"
-bind-key p run-shell "xclip -o -selection clipboard | tmux load-buffer - && tmux paste-buffer"
+#bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -selection clipboard -in"
+#bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xclip -selection clipboard -in"
+# bind-key p run-shell "xclip -o -selection clipboard | tmux load-buffer - && tmux paste-buffer"
+
+#bind-key -n MouseDown3Pane run-shell "xclip -o -selection clipboard | tmux load-buffer - && tmux paste-buffer"
 
 #################################################
 # Ubuntu Wayland (need to install wl-clipboard) #
