--- a/dotfiles/settings.json
+++ b/dotfiles/settings.json
@@ -1,15 +1,18 @@
 {
+    "security.workspace.trust.untrustedFiles": "open",
     "editor.minimap.enabled": false,
     "git.openRepositoryInParentFolders": "never",
     "terminal.integrated.enableMultiLinePasteWarning": true,
-    "security.workspace.trust.untrustedFiles": "open",
     "vim.foldfix": true,
     "cmake.showOptionsMovedNotification": false,
     "console": "integratedTerminal",
     "editor.unicodeHighlight.nonBasicASCII": false,
     "cline.vsCodeLmModelSelector": {},
-    "workbench.panel.defaultLocation": "right"
+    "workbench.panel.defaultLocation": "right",
     "files.associations": {
         "*.world": "xml"
-    }
+    },
+
+    "python.defaultInterpreterPath": "/home/han_zitong/python_venv/sse-k12/bin/python"
+
 }
