gitconfig & settings.json

--- a/dotfiles/settings.json
+++ b/dotfiles/settings.json
@@ -17,7 +17,7 @@
         "*.srdf": "xml"
     },
 
-    "python.defaultInterpreterPath": "/home/han_zitong/python_venv/sse-k12/bin/python",
+    "python.defaultInterpreterPath": "/bin/python3",
     "redhat.telemetry.enabled": false
 
 }
